removed img border from next steps

--- a/emails/elnaz/auto-responder/Ryan/download trial details desk.html
+++ b/emails/elnaz/auto-responder/Ryan/download trial details desk.html
@@ -326,26 +326,22 @@
                       <tr>
                         <td class="three sub-columns"></td>
                         <td class="nine sub-columns">
-                          <img class="img-border"
-                               src="http://software.dell.com/images/video/small/streamline-administration-and-recovery-of-microsoft-platforms-with-del873674-small.jpg"
-                               alt=""/>
+                          <img src="http://software.dell.com/images/email/ns-1.png" alt=""/>
                         </td>
                         <td class="expander"></td>
                       </tr>
                       <tr>
                         <td class="three sub-columns"></td>
                         <td class="nine sub-columns">
-                          <a href="#" class="text-size-15">Request Pricing</a>
+                          <a href="#" class="text-size-15">Lorem ipsum dolor sit amet, consectetuer adipiscing</a>
                         </td>
                         <td class="expander"></td>
                       </tr>
                       <tr>
                         <td class="three sub-columns"></td>
                         <td class="nine sub-columns">
-                          <p>
-                            We’ve received your request to hear from a Dell expert about RemoteScan Enterprise. We will
-                            follow up with you shortly.
-                          </p>
+                          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
+                            eget dolor. Aenean massa. Cum sociis natoque penatibus </p>
                         </td>
                         <td class="expander"></td>
                       </tr>
@@ -355,23 +351,22 @@
                     <table class="six columns">
                       <tr>
                         <td class="nine sub-columns">
-                          <img class="img-border" src="http://software.dell.com/images/teaser/remotescan.gif" alt=""/>
+                          <img src="http://software.dell.com/images/email/doc.jpg" alt=""/>
                         </td>
                         <td class="three sub-columns"></td>
                         <td class="expander"></td>
                       </tr>
                       <tr>
                         <td class="nine sub-columns">
-                          <a class="text-size-15" href="#">Introducing RemoteScan - Securely scan documents in any
-                            virtual environment</a>
+                          <a class="text-size-15" href="#">Lorem ipsum dolor sit amet, consectetuer adipiscing</a>
                         </td>
                         <td class="three sub-columns"></td>
                         <td class="expander"></td>
                       </tr>
                       <tr>
                         <td class="nine sub-columns">
-                          <p>RemoteScan enables you to share a single scanner or imaging device with other users over a
-                            network.</p>
+                          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
+                            eget dolor. Aenean massa. Cum sociis natoque penatibus </p>
                         </td>
                         <td class="three sub-columns"></td>
                         <td class="expander"></td>
@@ -399,9 +394,7 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <img class="img-border"
-                                             src="http://software.dell.com/images/video/small/streamline-administration-and-recovery-of-microsoft-platforms-with-del873674-small.jpg"
-                                             alt=""/>
+                                        <img src="http://software.dell.com/images/email/ns-1.png" alt=""/>
                                       </td>
                                       <td class="three sub-columns"></td>
                                       <td class="expander"></td>
@@ -409,9 +402,8 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <a href="#" class="text-size-15">
-                                          Request Pricing
-                                        </a>
+                                        <a href="#" class="text-size-15">Lorem ipsum dolor sit amet, consectetuer
+                                          adipiscing</a>
                                       </td>
                                       <td class="three sub-columns"></td>
                                       <td class="expander"></td>
@@ -419,10 +411,9 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <p>
-                                          We’ve received your request to hear from a Dell expert about RemoteScan
-                                          Enterprise. We will follow up with you shortly.
-                                        </p>
+                                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
+                                          ligula
+                                          eget dolor. Aenean massa. Cum sociis natoque penatibus </p>
                                       </td>
                                       <td class="six sub-columns"></td>
                                       <td class="expander"></td>
@@ -456,8 +447,7 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <img class="img-border"
-                                             src="http://software.dell.com/images/teaser/remotescan.gif" alt=""/>
+                                        <img src="http://software.dell.com/images/email/doc.jpg" alt=""/>
                                       </td>
                                       <td class="three sub-columns"></td>
                                       <td class="expander"></td>
@@ -465,8 +455,8 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <a class="text-size-15" href="#">Introducing RemoteScan - Securely scan
-                                          documents in any virtual environment</a>
+                                        <a href="#" class="text-size-15">Lorem ipsum dolor sit amet, consectetuer
+                                          adipiscing</a>
                                       </td>
                                       <td class="three sub-columns"></td>
                                       <td class="expander"></td>
@@ -474,8 +464,9 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <p>RemoteScan enables you to share a single scanner or imaging device with other
-                                          users over a network.</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
+                                          ligula
+                                          eget dolor. Aenean massa. Cum sociis natoque penatibus </p>
                                       </td>
                                       <td class="six sub-columns"></td>
                                       <td class="expander"></td>
