--- a/emails/elnaz/auto-responder/Ryan/download-doc-desk.html
+++ b/emails/elnaz/auto-responder/Ryan/download-doc-desk.html
@@ -269,26 +269,22 @@
                       <tr>
                         <td class="three sub-columns"></td>
                         <td class="nine sub-columns">
-                          <img class="img-border"
-                               src="http://software.dell.com/images/video/small/update-your-security-hardware-using-the-dell-advantage-loyalty-program873460-small.jpg"
-                               alt="" class="img-responsive img-border"/>
+                          <img src="http://software.dell.com/images/email/ns-1.png" alt=""/>
                         </td>
                         <td class="expander"></td>
                       </tr>
                       <tr>
                         <td class="three sub-columns"></td>
                         <td class="nine sub-columns">
-                          <a href="#" class="text-size-15">The keys to intelligent server monitoring</a>
+                          <a href="#" class="text-size-15">Lorem ipsum dolor sit amet, consectetuer adipiscing</a>
                         </td>
                         <td class="expander"></td>
                       </tr>
                       <tr>
                         <td class="three sub-columns"></td>
                         <td class="nine sub-columns">
-                          <p>
-                            The goal of intelligent server monitoring is to identify when a problem starts and isolate
-                            its cause with detailed metrics and real-time dashboard graphics.
-                          </p>
+                          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
+                            eget dolor. Aenean massa. Cum sociis natoque penatibus </p>
                         </td>
                         <td class="expander"></td>
                       </tr>
@@ -298,27 +294,22 @@
                     <table class="six columns">
                       <tr>
                         <td class="nine sub-columns">
-                          <img class="img-border"
-                               src="http://software.dell.com/images/video/small/get-the-highest-level-of-protection-with-continuous-threat-research-fr872759-small.jpg"
-                               class="img-responsive img-border" alt=""/>
+                          <img src="http://software.dell.com/images/email/doc.jpg" alt=""/>
                         </td>
                         <td class="three sub-columns"></td>
                         <td class="expander"></td>
                       </tr>
                       <tr>
                         <td class="nine sub-columns">
-                          <a class="text-size-15" href="#">Systems Integrator Builds Business by Managing Cloud
-                            Services</a>
+                          <a class="text-size-15" href="#">Lorem ipsum dolor sit amet, consectetuer adipiscing</a>
                         </td>
                         <td class="three sub-columns"></td>
                         <td class="expander"></td>
                       </tr>
                       <tr>
                         <td class="nine sub-columns">
-                          <p>
-                            A global systems integrator needed to manage multiple cloud services for government clients
-                            with a platform that would also accommodate long-term growth.
-                          </p>
+                          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
+                            eget dolor. Aenean massa. Cum sociis natoque penatibus </p>
                         </td>
                         <td class="three sub-columns"></td>
                         <td class="expander"></td>
@@ -337,7 +328,7 @@
                       <table class="twelve columns">
                         <tr>
                           <td>
-
+                            <!--[if !mso]><!-->
                             <table class="row">
                               <tbody>
                               <tr>
@@ -346,9 +337,7 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <img class="img-border"
-                                             src="http://software.dell.com/images/video/small/update-your-security-hardware-using-the-dell-advantage-loyalty-program873460-small.jpg"
-                                             class="img-responsive img-border" alt=""/>
+                                        <img src="http://software.dell.com/images/email/ns-1.png" alt=""/>
                                       </td>
                                       <td class="three sub-columns"></td>
                                       <td class="expander"></td>
@@ -356,7 +345,8 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <a href="#" class="text-size-15">The keys to intelligent server monitoring</a>
+                                        <a href="#" class="text-size-15">Lorem ipsum dolor sit amet, consectetuer
+                                          adipiscing</a>
                                       </td>
                                       <td class="three sub-columns"></td>
                                       <td class="expander"></td>
@@ -364,10 +354,9 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <p>
-                                          The goal of intelligent server monitoring is to identify when a problem starts
-                                          and isolate its cause with detailed metrics and real-time dashboard graphics.
-                                        </p>
+                                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
+                                          ligula
+                                          eget dolor. Aenean massa. Cum sociis natoque penatibus </p>
                                       </td>
                                       <td class="six sub-columns"></td>
                                       <td class="expander"></td>
@@ -377,7 +366,7 @@
                               </tr>
                               </tbody>
                             </table>
-
+                            <!--<![endif]-->
                           </td>
                           <td class="expander"></td>
                         </tr>
@@ -392,7 +381,7 @@
                       <table class="twelve columns">
                         <tr>
                           <td>
-
+                            <!--[if !mso]><!-->
                             <table class="row">
                               <tbody>
                               <tr>
@@ -401,9 +390,7 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <img class="img-border"
-                                             src="http://software.dell.com/images/video/small/get-the-highest-level-of-protection-with-continuous-threat-research-fr872759-small.jpg"
-                                             class="img-responsive img-border" alt=""/>
+                                        <img src="http://software.dell.com/images/email/doc.jpg" alt=""/>
                                       </td>
                                       <td class="three sub-columns"></td>
                                       <td class="expander"></td>
@@ -411,9 +398,8 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <a href="#" class="text-size-15">
-                                          Systems Integrator Builds Business by Managing Cloud Services
-                                        </a>
+                                        <a href="#" class="text-size-15">Lorem ipsum dolor sit amet, consectetuer
+                                          adipiscing</a>
                                       </td>
                                       <td class="three sub-columns"></td>
                                       <td class="expander"></td>
@@ -421,11 +407,9 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <p>
-                                          A global systems integrator needed to manage multiple cloud services for
-                                          government clients with a platform that would also accommodate long-term
-                                          growth.
-                                        </p>
+                                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
+                                          ligula
+                                          eget dolor. Aenean massa. Cum sociis natoque penatibus </p>
                                       </td>
                                       <td class="six sub-columns"></td>
                                       <td class="expander"></td>
@@ -435,7 +419,7 @@
                               </tr>
                               </tbody>
                             </table>
-
+                            <!--<![endif]-->
                           </td>
                           <td class="expander"></td>
                         </tr>
