--- a/emails/elnaz/auto-responder/Ryan/download-trial-screen-desk.html
+++ b/emails/elnaz/auto-responder/Ryan/download-trial-screen-desk.html
@@ -307,26 +307,22 @@
                       <tr>
                         <td class="three sub-columns"></td>
                         <td class="nine sub-columns">
-                          <img class="img-border"
-                               src="http://software.dell.com/images/video/small/predictive-analytics-breathes-new-life-into-asthma-case-management-881425-small.jpg"
-                               alt="" class="img-responsive img-border"/>
+                          <img src="http://software.dell.com/images/email/ns-1.png" alt=""/>
                         </td>
                         <td class="expander"></td>
                       </tr>
                       <tr>
                         <td class="three sub-columns"></td>
                         <td class="nine sub-columns">
-                          <a href="#" class="text-size-15">Request Pricing</a>
+                          <a href="#" class="text-size-15">Lorem ipsum dolor sit amet, consectetuer adipiscing</a>
                         </td>
                         <td class="expander"></td>
                       </tr>
                       <tr>
                         <td class="three sub-columns"></td>
                         <td class="nine sub-columns">
-                          <p>
-                            Get in touch with us, and we'll address your specific questions or concerns, as well as help
-                            you customize a solution for your unique requirements.
-                          </p>
+                          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
+                            eget dolor. Aenean massa. Cum sociis natoque penatibus </p>
                         </td>
                         <td class="expander"></td>
                       </tr>
@@ -336,25 +332,22 @@
                     <table class="six columns">
                       <tr>
                         <td class="nine sub-columns">
-                          <img class="img-border"
-                               src="http://software.dell.com/images/video/small/university-of-iowa-hospitals-and-clinics-transforms-patient-care-with-875353-small.jpg"
-                               class="img-responsive img-border" alt=""/>
+                          <img src="http://software.dell.com/images/email/doc.jpg" alt=""/>
                         </td>
                         <td class="three sub-columns"></td>
                         <td class="expander"></td>
                       </tr>
                       <tr>
                         <td class="nine sub-columns">
-                          <a class="text-size-15" href="#">University of Iowa Hospitals and Clinics transforms patient
-                            care with predictive analytics </a>
+                          <a class="text-size-15" href="#">Lorem ipsum dolor sit amet, consectetuer adipiscing</a>
                         </td>
                         <td class="three sub-columns"></td>
                         <td class="expander"></td>
                       </tr>
                       <tr>
                         <td class="nine sub-columns">
-                          <p>See how University of Iowa Hospitals and Clinics reduces surgical site infections
-                            with Dell Statistica advanced analytics software. </p>
+                          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
+                            eget dolor. Aenean massa. Cum sociis natoque penatibus </p>
                         </td>
                         <td class="three sub-columns"></td>
                         <td class="expander"></td>
@@ -382,9 +375,7 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <img class="img-border"
-                                             src="http://software.dell.com/images/video/medium/predictive-analytics-breathes-new-life-into-asthma-case-management-881425-medium.jpg"
-                                             class="img-responsive img-border" alt=""/>
+                                        <img src="http://software.dell.com/images/email/ns-1.png" alt=""/>
                                       </td>
                                       <td class="three sub-columns"></td>
                                       <td class="expander"></td>
@@ -392,7 +383,8 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <a href="#" class="text-size-15">Request Pricing</a>
+                                        <a href="#" class="text-size-15">Lorem ipsum dolor sit amet, consectetuer
+                                          adipiscing</a>
                                       </td>
                                       <td class="three sub-columns"></td>
                                       <td class="expander"></td>
@@ -400,10 +392,9 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <p>
-                                          Get in touch with us, and we'll address your specific questions or concerns,
-                                          as well as help you customize a solution for your unique requirements.
-                                        </p>
+                                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
+                                          ligula
+                                          eget dolor. Aenean massa. Cum sociis natoque penatibus </p>
                                       </td>
                                       <td class="six sub-columns"></td>
                                       <td class="expander"></td>
@@ -437,9 +428,7 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <img class="img-border"
-                                             src="http://software.dell.com/images/video/medium/university-of-iowa-hospitals-and-clinics-transforms-patient-care-with-875353-medium.jpg"
-                                             class="img-responsive img-border" alt=""/>
+                                        <img src="http://software.dell.com/images/email/doc.jpg" alt=""/>
                                       </td>
                                       <td class="three sub-columns"></td>
                                       <td class="expander"></td>
@@ -447,10 +436,8 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <a href="#" class="text-size-15">
-                                          University of Iowa Hospitals and Clinics transforms patient care with
-                                          predictive analytics
-                                        </a>
+                                        <a href="#" class="text-size-15">Lorem ipsum dolor sit amet, consectetuer
+                                          adipiscing</a>
                                       </td>
                                       <td class="three sub-columns"></td>
                                       <td class="expander"></td>
@@ -458,9 +445,9 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <p>See how University of Iowa Hospitals and Clinics reduces surgical site
-                                          infections
-                                          with Dell Statistica advanced analytics software. </p>
+                                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
+                                          ligula
+                                          eget dolor. Aenean massa. Cum sociis natoque penatibus </p>
                                       </td>
                                       <td class="six sub-columns"></td>
                                       <td class="expander"></td>
