--- a/emails/elnaz/auto-responder/download-trial-box.htm
+++ b/emails/elnaz/auto-responder/download-trial-box.htm
@@ -59,25 +59,11 @@
                         <td class="three sub-columns"></td>
                         <td class="nine sub-columns">
                           <table class="button button-blue button-width-auto mt-0 mb-0">
-                            <!--[if gte mso 9]>
-                            <tr>
-                              <td>
-                                <span>&nbsp;</span>
-                              </td>
-                            </tr>
-                            <![endif]-->
                             <tr>
                               <td>
                                 <a href="#">Download Free Trial</a>
                               </td>
                             </tr>
-                            <!--[if gte mso 9]>
-                            <tr>
-                              <td>
-                                <span>&nbsp;</span>
-                              </td>
-                            </tr>
-                            <![endif]-->
                           </table>
                         </td>
                         <td class="expander"></td>
@@ -155,7 +141,7 @@
                           <td class="center">
                             <center>
                               <a href="#">
-                                <img class="center" alt="text" src="http://stage.software.dell.com/images/email/150x150.png">
+                                <img class="center img-border" alt="text" src="http://stage.software.dell.com/images/email/150x150.png">
                               </a>
                             </center>
                           </td>
@@ -304,7 +290,7 @@
                       <tr>
                         <td class="three sub-columns"></td>
                         <td class="nine sub-columns">
-                          <img class="img-border" src="http://software.dell.com/images/email/ns-1.png" alt=""/>
+                          <img src="http://software.dell.com/images/email/ns-1.png" alt=""/>
                         </td>
                         <td class="expander"></td>
                       </tr>
@@ -329,7 +315,7 @@
                     <table class="six columns">
                       <tr>
                         <td class="nine sub-columns">
-                          <img class="img-border" src="http://software.dell.com/images/email/doc.jpg" alt=""/>
+                          <img src="http://software.dell.com/images/email/doc.jpg" alt=""/>
                         </td>
                         <td class="three sub-columns"></td>
                         <td class="expander"></td>
@@ -372,7 +358,7 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <img class="img-border" src="http://software.dell.com/images/email/ns-1.png" alt=""/>
+                                        <img src="http://software.dell.com/images/email/ns-1.png" alt=""/>
                                       </td>
                                       <td class="three sub-columns"></td>
                                       <td class="expander"></td>
@@ -425,7 +411,7 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <img class="img-border" src="http://software.dell.com/images/email/doc.jpg" alt=""/>
+                                        <img src="http://software.dell.com/images/email/doc.jpg" alt=""/>
                                       </td>
                                       <td class="three sub-columns"></td>
                                       <td class="expander"></td>
