--- a/emails/elnaz/auto-responder/in-person-event.htm
+++ b/emails/elnaz/auto-responder/in-person-event.htm
@@ -305,7 +305,7 @@
                       <tr>
                         <td class="three sub-columns"></td>
                         <td class="nine sub-columns">
-                          <img class="img-border" src="http://software.dell.com/images/email/ns-1.png" alt=""/>
+                          <img src="http://software.dell.com/images/email/ns-1.png" alt=""/>
                         </td>
                         <td class="expander"></td>
                       </tr>
@@ -330,7 +330,7 @@
                     <table class="six columns">
                       <tr>
                         <td class="nine sub-columns">
-                          <img class="img-border" src="http://software.dell.com/images/email/doc.jpg" alt=""/>
+                          <img src="http://software.dell.com/images/email/doc.jpg" alt=""/>
                         </td>
                         <td class="three sub-columns"></td>
                         <td class="expander"></td>
@@ -373,8 +373,7 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <img class="img-border" src="http://software.dell.com/images/email/ns-1.png"
-                                             alt=""/>
+                                        <img src="http://software.dell.com/images/email/ns-1.png" alt=""/>
                                       </td>
                                       <td class="three sub-columns"></td>
                                       <td class="expander"></td>
@@ -427,8 +426,7 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <img class="img-border" src="http://software.dell.com/images/email/doc.jpg"
-                                             alt=""/>
+                                        <img src="http://software.dell.com/images/email/doc.jpg" alt=""/>
                                       </td>
                                       <td class="three sub-columns"></td>
                                       <td class="expander"></td>
