--- a/emails/elnaz/auto-responder/webex-event.htm
+++ b/emails/elnaz/auto-responder/webex-event.htm
@@ -481,7 +481,7 @@
                       <tr>
                         <td class="three sub-columns"></td>
                         <td class="nine sub-columns">
-                          <img class="img-border" src="http://software.dell.com/images/email/ns-1.png" alt=""/>
+                          <img src="http://software.dell.com/images/email/ns-1.png" alt=""/>
                         </td>
                         <td class="expander"></td>
                       </tr>
@@ -506,7 +506,7 @@
                     <table class="six columns">
                       <tr>
                         <td class="nine sub-columns">
-                          <img class="img-border" src="http://software.dell.com/images/email/doc.jpg" alt=""/>
+                          <img src="http://software.dell.com/images/email/doc.jpg" alt=""/>
                         </td>
                         <td class="three sub-columns"></td>
                         <td class="expander"></td>
@@ -549,8 +549,7 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <img class="img-border" src="http://software.dell.com/images/email/ns-1.png"
-                                             alt=""/>
+                                        <img src="http://software.dell.com/images/email/ns-1.png" alt=""/>
                                       </td>
                                       <td class="three sub-columns"></td>
                                       <td class="expander"></td>
@@ -603,8 +602,7 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <img class="img-border" src="http://software.dell.com/images/email/doc.jpg"
-                                             alt=""/>
+                                        <img src="http://software.dell.com/images/email/doc.jpg" alt=""/>
                                       </td>
                                       <td class="three sub-columns"></td>
                                       <td class="expander"></td>
