--- a/emails/elnaz/auto-responder/in-person-event-agenda.htm
+++ b/emails/elnaz/auto-responder/in-person-event-agenda.htm
@@ -540,7 +540,7 @@
                       <tr>
                         <td class="three sub-columns"></td>
                         <td class="nine sub-columns">
-                          <img class="img-border" src="http://software.dell.com/images/email/ns-1.png" alt=""/>
+                          <img src="http://software.dell.com/images/email/ns-1.png" alt=""/>
                         </td>
                         <td class="expander"></td>
                       </tr>
@@ -565,7 +565,7 @@
                     <table class="six columns">
                       <tr>
                         <td class="nine sub-columns">
-                          <img class="img-border" src="http://software.dell.com/images/email/doc.jpg" alt=""/>
+                          <img src="http://software.dell.com/images/email/doc.jpg" alt=""/>
                         </td>
                         <td class="three sub-columns"></td>
                         <td class="expander"></td>
@@ -608,8 +608,7 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <img class="img-border" src="http://software.dell.com/images/email/ns-1.png"
-                                             alt=""/>
+                                        <img src="http://software.dell.com/images/email/ns-1.png" alt=""/>
                                       </td>
                                       <td class="three sub-columns"></td>
                                       <td class="expander"></td>
@@ -662,8 +661,7 @@
                                     <tr>
                                       <td class="three sub-columns"></td>
                                       <td class="six sub-columns">
-                                        <img class="img-border" src="http://software.dell.com/images/email/doc.jpg"
-                                             alt=""/>
+                                        <img src="http://software.dell.com/images/email/doc.jpg" alt=""/>
                                       </td>
                                       <td class="three sub-columns"></td>
                                       <td class="expander"></td>
